--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?eqytx#1" target="_blank">首页</a> | <a href="https://d2frcdcjb0c6wq.cloudfront.net/1?prvkxyt" target="_blank">动态网</a> | <a href="https://d2agd1dsojkgmu.cloudfront.net/2?brduengr" target="_blank">大纪元</a> | <a href="https://dm41kyod3ht9r.cloudfront.net/4?rrqui" target="_blank">看中国</a> | <a href="https://dqgl8k1bfvgsc.cloudfront.net/pHh5q?edujb" target="_blank">新生网</a> | <a href="https://d3cacbcgqcawbc.cloudfront.net/tktpt?qiltbs" target="_blank">阿波罗网</a> | <a href="https://d2rum6kyy1zd7y.cloudfront.net/Mjpvu?onffuqqw" target="_blank">干净世界</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/10?xicnysup" target="_blank">退党服务</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/Rffqf?wkuehu" target="_blank">明慧广播</a> | <a href="https://d3t1om6knkjnq4.cloudfront.net/nw9Vn?iqvkkukux" target="_blank">传奇时代</a> | <a href="https://d12ogqhrsnt8ma.cloudfront.net/AF9AG?dgqvqfy" target="_blank">新境界影视</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/zqMQA?pbkvcit" target="_blank">文昭谈论</a> | <a href="https://d1205lb7lnyr8t.cloudfront.net/7?zlmdsek" target="_blank">明慧</a></p><p><a href="https://d2iiqnrx4rrboe.cloudfront.net/9?svgwmsg" target="_blank">大法</a> | <a href="https://d2b68ib2p4x8t6.cloudfront.net/3?qtwcxmtpr" target="_blank">新唐人</a> | <a href="https://d1d4q9enzm2lz3.cloudfront.net/obAhT?jtjrthgu" target="_blank">人民报</a> | <a href="https://dp0r2i3ixve2v.cloudfront.net/xXNHu?zbbyeok" target="_blank">放光明</a> | <a href="https://d7b58bkqqk9ju.cloudfront.net/5?gbdpv" target="_blank">新纪元</a> | <a href="https://d1ot7p38i3wmt5.cloudfront.net/6?ccuybsy" target="_blank">希望之声</a> | <a href="https://d3gus727acem18.cloudfront.net/11?ufskc" target="_blank">无界网络</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/Pueji?heflupp" target="_blank">追查国际</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/16?qxlrme" target="_blank">明慧之窗</a> | <a href="https://d265ujbtchne9r.cloudfront.net/LdvzZ?tuoorzmy" target="_blank">细语人生</a> | <a href="https://d2aqxvnyguf0uq.cloudfront.net/fBn3r?mtgihbv" target="_blank">新世纪影视</a> | <a href="https://dwpf34pf0p4a8.cloudfront.net/PUWMb?ylmhl" target="_blank">江峰时刻</a> | <a href="https://d3sh8rhxyvin24.cloudfront.net/8?evmpjrr" target="_blank">正见</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290831.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1178637558-320x200.jpg"><p align="center">中共三中全会在内外危机中开锣 专家这样看</p></a>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?fnceq#1" target="_blank">首页</a> | <a href="https://d3siwajeg0khti.cloudfront.net/1?tsymikpgo" target="_blank">动态网</a> | <a href="https://d1eqe8yfgc9j6n.cloudfront.net/2?fudblnx" target="_blank">大纪元</a> | <a href="https://d3sh8rhxyvin24.cloudfront.net/4?ythespv" target="_blank">看中国</a> | <a href="https://ddtx9y1vir8bp.cloudfront.net/pHh5q?jqhfnaqa" target="_blank">新生网</a> | <a href="https://ddpul9mprf1bn.cloudfront.net/tktpt?odjqlj" target="_blank">阿波罗网</a> | <a href="https://d2torrlf4djx10.cloudfront.net/Mjpvu?ibeukj" target="_blank">干净世界</a> | <a href="https://d2esw86q58v8t7.cloudfront.net/10?gvpfqulat" target="_blank">退党服务</a> | <a href="https://d1bfxyb2xiiyyy.cloudfront.net/Rffqf?zhskvdv" target="_blank">明慧广播</a> | <a href="https://dmepc9x6zy689.cloudfront.net/nw9Vn?iaktztgec" target="_blank">传奇时代</a> | <a href="https://d2zq9v5psazuww.cloudfront.net/AF9AG?ujrnnot" target="_blank">新境界影视</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/zqMQA?depgvdjn" target="_blank">文昭谈论</a> | <a href="https://d2cenl0crtmzsc.cloudfront.net/7?rwpstaknq" target="_blank">明慧</a></p><p><a href="https://d3dbj8b4dt94o2.cloudfront.net/9?aruxj" target="_blank">大法</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/3?fpqmug" target="_blank">新唐人</a> | <a href="https://d2iiqnrx4rrboe.cloudfront.net/obAhT?psofhglq" target="_blank">人民报</a> | <a href="https://d259d2wq6kf78s.cloudfront.net/xXNHu?egespej" target="_blank">放光明</a> | <a href="https://d1eqe8yfgc9j6n.cloudfront.net/5?xwuqz" target="_blank">新纪元</a> | <a href="https://d2oemtubh889hy.cloudfront.net/6?eggvho" target="_blank">希望之声</a> | <a href="https://d1znr9c9sm73cv.cloudfront.net/11?qbdkubk" target="_blank">无界网络</a> | <a href="https://dfxrfb9070id6.cloudfront.net/Pueji?rimhubidq" target="_blank">追查国际</a> | <a href="https://d2zvse34bag8ol.cloudfront.net/16?jhvcdgv" target="_blank">明慧之窗</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/LdvzZ?mkqfurr" target="_blank">细语人生</a> | <a href="https://duxu97yt14q37.cloudfront.net/fBn3r?ceygkqimu" target="_blank">新世纪影视</a> | <a href="https://d8jw662akk94j.cloudfront.net/PUWMb?ugllpmfmh" target="_blank">江峰时刻</a> | <a href="https://d3frzobj0kj0md.cloudfront.net/8?dxabib" target="_blank">正见</a></p></td></tr>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290946.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290949-GettyImages-1224872512-320x200.jpg"><p align="center">中国民众热议“垃圾时间” 专家剖析原因</p></a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290946.md#1" title="中国民众热议“垃圾时间” 专家剖析原因""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290949-GettyImages-1224872512-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290831.md#1" title="中共三中全会在内外危机中开锣 专家这样看""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1178637558-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290815.md#1" title="拜登全国讲话 谴责暴力 吁美国人冷静团结""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290822-GettyImages-2161483587-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290726.md#1" title="川普和多名政要感恩上帝 使他幸免于难""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290273-2407132111461528-320x200.jpg">&nbsp;</a>
@@ -11,26 +12,26 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290685.md#1" title="中共三中全会前夕 北京严密管控民众""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290710-2-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290663.md#1" title="美联储降息 房价恐仍然不会下降""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290664-eae640b996c0ba1d3b3d940da0ce0a7c-320x200.jpeg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289716.md#1" title="CECC幕僚长：阻中共活摘 确保美企不被利用""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14288959-LDB2433-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287991.md#1" title="Costco礼品卡很超值 但四缺陷易被忽略""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/12/id13422008-shutterstock_1320536255-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290945.md#1">旧金山陈小焱启动竞选 百余华裔到场助威</a><br>
-:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290942.md#1">爱尔兰参议院访团抵台 将会见副总统萧美琴</a><br>
-:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290933.md#1">房市难触底 中国新房价格创9年来最大跌幅</a><br>
+:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290946.md#1">中国民众热议“垃圾时间” 专家剖析原因</a><br>
+:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290945.md#1">旧金山陈小焱启动竞选 百余华裔到场助威</a><br>
+:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290942.md#1">爱尔兰参议院访团抵台 将会见副总统萧美琴</a><br>
+:clock8: <em>46分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290933.md#1">房市难触底 中国新房价格创9年来最大跌幅</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290868.md#1">危地马拉国会议长率团访台 将拜会赖清德</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290853.md#1">新西兰总理：将更多揭露中共间谍活动</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290864.md#1">纽约市住房管理局腐败案 一亚裔被告认罪</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290875.md#1">300纽约小房东时代广场集会“要公平” 多数为华人</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290834.md#1">川普遭遇暗杀未遂事件 详细时间线剖析</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290902.md#1">大纽约侨界欢送经文处副处长张俊裕</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290857.md#1">川普遇刺事件后纽约市加强安保</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290834.md#1">川普遭遇暗杀未遂事件 详细时间线剖析</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290902.md#1">大纽约侨界欢送经文处副处长张俊裕</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289717.md#1">衡阳保卫战电影被禁 分析：中共抹杀历史</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290126.md#1">限额5000元 中国多家银行下调储户交易额度</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290039.md#1">广东多地现不明飞行物 目击者：持续10分钟</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290084.md#1">台湾罕见披露中共火箭军在内蒙古试射导弹</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289908.md#1">失业潮下 四川大学拟撤31个专业 引热议</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290084.md#1">台湾罕见披露中共火箭军在内蒙古试射导弹</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289988.md#1">租客朋友暂住未报官 深圳房东遭罚 网民吃惊</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289737.md#1">中国社会戾气上升 逾1个月发生60起袭击事件</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290139.md#1">大陆男子用万元硬币还款 被法院罚2000元</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289769.md#1">北京突降暴雨 一秒白天变黑夜 连发六预警</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/5/8/n14243928.md#1">人类存亡危机与创世主的恩典</a><br>
@@ -114,7 +115,7 @@
 
 !共 433,200,431 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289763.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289814-158f93a220c221bf58a4fc43c59d05a6-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289763.md#1">芬兰法轮功7·20游行反迫害 民众签名支持</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289703.md#1">追查国际主席：中共活摘器官是毁灭人类的罪恶</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289700.md#1">退党中心主席：退党是解体中共最和平之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289642.md#1">走线华人参加法轮功大游行：我要忏悔</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289468.md#1">7?20集会游行反迫害 华府观众：应帮助法轮功</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289281.md#1">遭软禁九个月 上海访民丁水萍向外界呼救</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290933.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/05/id14252605-GettyImages-2152798952-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290933.md#1">房市难触底 中国新房价格创9年来最大跌幅</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290788.md#1">中国四大航空上半年预亏达81亿 全年盈利仍难</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290160.md#1">“美妆一哥”骆王宇面临退款1.5亿元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290231.md#1">中共官方承认汽车市场无序竞争 冲击产业链</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289629.md#1">华裔CEO：美国在AI竞争中领先中共</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289836.md#1">大陆多地城投公司商业票据违约</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290853.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290918-AFP__20240710__2161380146__v3__Preview__WorldLeadersAttendNatoSummitInWashingtonDC-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290853.md#1">新西兰总理：将更多揭露中共间谍活动</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1">建设银行与广发银行两名分行副行长同日落马</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290095.md#1">消息：加拿大将与G7盟友讨论中共海外警察站</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289639.md#1">【环球直击】25年风雨路 法轮功学员华府烛光夜悼</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289640.md#1">【全球新闻】新冠卷土重来 中共官方承认多人亡</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14286366-GettyImages-2157553384-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1">中国南方未来一周持续高温 下周一正式入伏</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289363.md#1">内蒙古额尔古纳市载游客车辆侧翻 酿3死4伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289428.md#1">河北承德一村庄突发山洪 惊险画面曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289323.md#1">北京一秒天黑 突降瓢泼大雨 连发五预警</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289306.md#1">重庆多地洪灾 部分街道积水3米 多人死亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288993.md#1">女生北大毕业后 又考入上海交大 引发关注</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290852.md#1"><img width="320" align ="left" src="https://cn.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290852.md#1">三退声明精选（2024/07/14）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290139.md#1">大陆男子用万元硬币还款 被法院罚2000元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290254.md#1">三退声明精选（2024/07/13）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290033.md#1">辽宁一市监局职员未到午休全离岗 市民要问责</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289996.md#1">油罐车混装事件引恐慌 大陆榨油机销量翻4倍</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289987.md#1">浙江男子持玩具枪打劫金店 店员惊恐尖叫</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289980-Unknown-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1">河南一高中办“编导补习班” 遭质疑捞钱</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288730.md#1">深圳龙岗教育局暑期招志愿教师照看官员子女？</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286971.md#1">广西福建相继出现“龙吸水”奇观</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286471.md#1">天津一新规打破教师“铁饭碗” 引发争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286454.md#1">“人死后指纹还能解锁手机吗 ”引发热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283647.md#1">港大经管学院查获约30名中国籍学生假学历入学</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289763.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289814-158f93a220c221bf58a4fc43c59d05a6-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289763.md#1">芬兰法轮功7·20游行反迫害 民众签名支持</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289703.md#1">追查国际主席：中共活摘器官是毁灭人类的罪恶</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289700.md#1">退党中心主席：退党是解体中共最和平之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289642.md#1">走线华人参加法轮功大游行：我要忏悔</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289468.md#1">7?20集会游行反迫害 华府观众：应帮助法轮功</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289281.md#1">遭软禁九个月 上海访民丁水萍向外界呼救</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290933.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/05/id14252605-GettyImages-2152798952-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290933.md#1">房市难触底 中国新房价格创9年来最大跌幅</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290788.md#1">中国四大航空上半年预亏达81亿 全年盈利仍难</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290160.md#1">“美妆一哥”骆王宇面临退款1.5亿元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290231.md#1">中共官方承认汽车市场无序竞争 冲击产业链</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289629.md#1">华裔CEO：美国在AI竞争中领先中共</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289836.md#1">大陆多地城投公司商业票据违约</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290853.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290918-AFP__20240710__2161380146__v3__Preview__WorldLeadersAttendNatoSummitInWashingtonDC-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290853.md#1">新西兰总理：将更多揭露中共间谍活动</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1">建设银行与广发银行两名分行副行长同日落马</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290095.md#1">消息：加拿大将与G7盟友讨论中共海外警察站</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289639.md#1">【环球直击】25年风雨路 法轮功学员华府烛光夜悼</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289640.md#1">【全球新闻】新冠卷土重来 中共官方承认多人亡</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14286366-GettyImages-2157553384-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1">中国南方未来一周持续高温 下周一正式入伏</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289363.md#1">内蒙古额尔古纳市载游客车辆侧翻 酿3死4伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289428.md#1">河北承德一村庄突发山洪 惊险画面曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289323.md#1">北京一秒天黑 突降瓢泼大雨 连发五预警</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289306.md#1">重庆多地洪灾 部分街道积水3米 多人死亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288993.md#1">女生北大毕业后 又考入上海交大 引发关注</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290852.md#1"><img width="320" align ="left" src="https://cn.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290852.md#1">三退声明精选（2024/07/14）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290254.md#1">三退声明精选（2024/07/13）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290033.md#1">辽宁一市监局职员未到午休全离岗 市民要问责</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289996.md#1">油罐车混装事件引恐慌 大陆榨油机销量翻4倍</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289987.md#1">浙江男子持玩具枪打劫金店 店员惊恐尖叫</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289951.md#1">中共院士终身制没了 引发热议</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289980-Unknown-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1">河南一高中办“编导补习班” 遭质疑捞钱</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288730.md#1">深圳龙岗教育局暑期招志愿教师照看官员子女？</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286971.md#1">广西福建相继出现“龙吸水”奇观</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286471.md#1">天津一新规打破教师“铁饭碗” 引发争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286454.md#1">“人死后指纹还能解锁手机吗 ”引发热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283647.md#1">港大经管学院查获约30名中国籍学生假学历入学</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284768.md#1">前高官：中共恐怖治国假话盛行 官员难善终</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274702.md#1">洪水淹桂林 王维洛：与发展旅游等有关</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260042.md#1">袁红冰忆六四：坦克车把学生挤死在铁栏上</a><br>
